--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>Bootstrap Site</title>
 </head>
+
 <body>
     <!------ Navbar------>
     <nav id="nav-bar" class="navbar navbar-expand-lg">
@@ -46,7 +51,8 @@
             <div class="row">
                 <div class="col-md-6 text-light top-home">
                     <h1>BEST DIGITAL AGENCY</h1>
-                    <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio non nostrum iste obcaecati! Illum quos magni ab maxime autem?</p>
+                    <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio non nostrum iste
+                        obcaecati! Illum quos magni ab maxime autem?</p>
                     <a href="#"><img src="images/play.png" class="play-btn" alt="play-button">Watch Tutorials</a>
                 </div>
                 <div class="col-md-6 bottom-home">
@@ -65,41 +71,50 @@
             <div class="row services text-center">
 
                 <div class="col-md service-1">
-                   <div class="card">
-                       <div class="card-body">
-                         <img src="images/service1.png" alt="chat-img">
-                         <div class="card-title"><h3>Growth Marketing</h3></div>
-                          <div class="card-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate omnis, architecto placeat sed error consequatur.</p>
-                          </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="images/service1.png" alt="chat-img">
+                            <div class="card-title">
+                                <h3>Growth Marketing</h3>
+                            </div>
+                            <div class="card-text">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate omnis, architecto
+                                    placeat sed error consequatur.</p>
+                            </div>
                         </div>
-                   </div>
+                    </div>
                 </div>
 
                 <div class="col-md service-2">
-                   <div class="card">
-                       <div class="card-body">
-                         <img src="images/service2.png" alt="chat-img">
-                         <div class="card-title"><h3>Online Branding</h3></div>
-                          <div class="card-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate omnis, architecto placeat sed error consequatur.</p>
-                          </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="images/service2.png" alt="chat-img">
+                            <div class="card-title">
+                                <h3>Online Branding</h3>
+                            </div>
+                            <div class="card-text">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate omnis, architecto
+                                    placeat sed error consequatur.</p>
+                            </div>
                         </div>
-                   </div>
+                    </div>
                 </div>
 
                 <div class="col-md service-3">
-                   <div class="card">
-                       <div class="card-body">
-                         <img src="images/service3.png" alt="chat-img">
-                         <div class="card-title"><h3>Animated Adds</h3></div>
-                          <div class="card-text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate omnis, architecto placeat sed error consequatur.</p>
-                          </div>
+                    <div class="card">
+                        <div class="card-body">
+                            <img src="images/service3.png" alt="chat-img">
+                            <div class="card-title">
+                                <h3>Animated Adds</h3>
+                            </div>
+                            <div class="card-text">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate omnis, architecto
+                                    placeat sed error consequatur.</p>
+                            </div>
                         </div>
-                   </div>
+                    </div>
                 </div>
-                
+
             </div>
             <button type="button" class="btn btn-primary">All Services</button>
         </div>
@@ -135,12 +150,14 @@
             <h2 class="text-center services-h2">WHAT CLIENT SAYS</h2>
             <div class="row g-5 offset-1 testimonials">
                 <div class="col-md-5 left-line top-home">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum aut beatae esse laboriosam!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum aut beatae esse laboriosam!
+                    </p>
                     <img src="images/user1.jpg" alt="user-1">
                     <p class="block"><strong>Jane Doe</strong><br>Co-founder at xyz</p>
                 </div>
                 <div class="col-md-5 left-linee bottom-home">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum aut beatae esse laboriosam!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum aut beatae esse laboriosam!
+                    </p>
                     <img src="images/user2.jpg" alt="user-2">
                     <p class="block"><strong>John Doe</strong><br>Director at xyz</p>
                 </div>
@@ -170,13 +187,17 @@
             <div class="row g-5 footer-box">
                 <div class="col-md-4">
                     <img src="images/demo-logo.png" alt="demo-logo" class="footer-logo">
-                    <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis vel odio, accusamus quisquam repudiandae beatae quibusdam amet!</p>
+                    <p class="text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis vel odio,
+                        accusamus quisquam repudiandae beatae quibusdam amet!</p>
                 </div>
                 <div class="col-md-4 text-light">
                     <h4>Contact Us</h4>
-                    <address><i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp;&nbsp;World Trade Center, Bangalore</address>
-                    <p><i class="fa-solid fa-phone"></i>&nbsp;&nbsp;&nbsp;<a href="tel:+1 0123456789">+1 0123456789</a></p>
-                    <p><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;&nbsp;<a href="email:xyz@gmail.com">xyz@gmail.com</a></p>
+                    <address><i class="fa-solid fa-location-dot"></i>&nbsp;&nbsp;&nbsp;World Trade Center, Bangalore
+                    </address>
+                    <p><i class="fa-solid fa-phone"></i>&nbsp;&nbsp;&nbsp;<a href="tel:+1 0123456789">+1 0123456789</a>
+                    </p>
+                    <p><i class="fa-solid fa-envelope"></i>&nbsp;&nbsp;&nbsp;<a
+                            href="email:xyz@gmail.com">xyz@gmail.com</a></p>
                 </div>
                 <div class="col-md-4 text-light">
                     <h4>Subscribe To Our Newsletter</h4>
@@ -270,8 +291,11 @@
         });
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js"
+        integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 </body>
+
 </html>
